# StreamNook

./: .gitignore  CHANGELOG.md  DROPS_IMPLEMENTATION.md  README.md  RELEASE.md  _emoji_strip.mjs  announcements.json  checksums.txt  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tmp_emote2.json  tmp_user.json  tsconfig.json  vite.config.js  vite.config.mjs
.agent/workflows/: push_to_stable.md
.github/: dependabot.yml
.github/workflows/: build-release.yml  check-dependencies.yml  dependabot-auto-merge.yml  update-universal-cache.yml
analytics-dashboard/: package-lock.json  package.json  tailwind.config.js
analytics-dashboard/src/: App.tsx  index.css
docs/: BUNDLED_DISTRIBUTION_IMPLEMENTATION.md  MODULAR_AUDIT.md
docs/plugins/: DEVELOPER_GUIDE.md  HOOKS.md  MANIFEST.md  OFFICIAL.md  PROTOCOL.md  README.md  SIGNING.md  UI_PLUGINS.md
plugins/ad-bypass/: Cargo.toml  README.md  plugin.toml
plugins/ad-bypass/src/: detect.rs  main.rs  master.rs  protocol.rs  proxies.rs
plugins/chat-logger/: Cargo.toml  README.md  plugin.toml
plugins/chat-logger/src/: main.rs  protocol.rs
plugins/drops-farmer/: Cargo.toml  README.md  plugin.toml
plugins/drops-farmer/src/: main.rs  mining.rs  protocol.rs  twitch.rs
plugins/lists/: README.md  build.mjs  plugin.toml  tsconfig.json
public/: twitch-login-bar.html
scripts/: hls-diag.mjs  increment-version.js  svg2png.js  update-dependencies.ps1  update-universal-cache.js  whisper-scraper.js
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: accounts.rs  announcements.rs  app.rs  automation.rs  badge_metadata.rs  badge_service.rs  badgebase.rs  badges.rs  bandwidth_test.rs  cache.rs  channel_panels.rs  chat.rs  chat_identity.rs  components.rs  cosmetics_cache.rs  diagnostic_logging.rs  discord.rs  drops.rs  emoji.rs  emotes.rs  eventsub.rs  hype_train.rs  identity.rs  integrity.rs  justlog.rs  layout.rs  link_preview.rs  logs.rs  magne.rs  mod.rs  modroom.rs  multi_nook.rs  plugins.rs  profile_cache.rs  proxy_health.rs  resub.rs  session.rs  settings.rs  seventv.rs  seventv_cosmetics.rs  (+9 more)
src-tauri/src/models/: chat_layout.rs  components.rs  drops.rs  mod.rs  settings.rs  stream.rs  user.rs
src-tauri/src/plugin_host/: broker.rs  install.rs  manifest.rs  mod.rs  registry.rs
src-tauri/src/services/: account_store.rs  ad_detect.rs  auth_proxy.rs  background_service.rs  badge_polling_service.rs  badge_service.rs  baseline_speed_service.rs  bttv_pro_service.rs  cache_service.rs  channel_points_service.rs  channel_points_websocket_service.rs  chat_logger_service.rs  chat_service.rs  cookie_jar_service.rs  diagnostic_logger.rs  discord_service.rs  drops_auth_service.rs  drops_service.rs  drops_websocket_service.rs  embedded_dashboard.rs  emoji_service.rs  emote_prefetch_service.rs  emote_service.rs  eventsub_service.rs  hls_projection.rs  http.rs  irc_service.rs  kick_auth_service.rs  layout_service.rs  live_notification_service.rs  ll_diagnostics.rs  ll_origin.rs  ll_soak.rs  log_service.rs  magne_service.rs  mining_service.rs  mod.rs  modroom_auth_service.rs  multi_nook_server.rs  profile_cache_service.rs  (+20 more)
src-tauri/src/services/providers/: key.rs  kick.rs  kick_emotes.rs  mod.rs  tiktok.rs  youtube.rs
src-tauri/src/services/song_id/: algorithm.rs  mod.rs  odesli.rs  shazam.rs  signature_format.rs
src-tauri/src/utils/: mod.rs  oauth_server.rs
src/components/: AboutWidget.tsx  AnnouncementsBanner.tsx  AtmosphereBackground.tsx  BadgeDetailOverlay.tsx  BadgesOverlay.tsx  ChangelogOverlay.tsx  ChannelAboutReveal.tsx  ChannelPointsIcon.tsx  ChannelPointsLeaderboard.tsx  ChannelPointsMenu.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatWidget.tsx  ClipEditor.tsx  ClipModal.tsx  ColorWheelPicker.tsx  CommandPalette.tsx  ConfettiBurst.tsx  DashboardWidget.tsx  DesyncRepairDialog.tsx  DropsCenter.tsx  DropsOverlay.tsx  DropsWidget.tsx  DynamicIsland.tsx  EmoteSetsOverlay.tsx  EmoteSpotlight.tsx  EntitlementUnlockNote.tsx  ErrorBoundary.tsx  FallbackImage.tsx  Home.tsx  HypeTrainBanner.tsx  InventoryOverlay.tsx  KickAccountChip.tsx  ListsPanel.tsx  LiveOverlay.tsx  LiveStreamsOverlay.tsx  LoadingWidget.tsx  MajorCologneChrome.css  MajorCologneChrome.tsx  MarketplaceOverlay.tsx  (+41 more)
src/constants/: compactViewPresets.ts  network.ts
src/data/: proxies.json
src/hooks/: useChannelSocial.ts  useMultiChat.ts  useSettings.ts  useSpeedTest.ts  useTauri.rs  useTwitchChat.ts  useVideoPlayer.ts
src/keybindings/: commands.ts  playerControls.ts
src/pages/: ProfileCardPage.tsx
src/plugins-ui/: PluginOverlayOutlet.tsx  PluginTitleBarButtons.tsx  PluginUiHost.tsx  PluginWindowHost.tsx  api.ts  chatBridge.ts  hostLibs.ts  loader.ts  registry.ts  types.ts  windows.ts
src/services/: accountService.ts  activityNormalizer.ts  atmospheres.ts  badgeImageCacheService.ts  badgeParsingService.ts  badgePollingService.ts  badgeService.ts  badgeSocketService.ts  cologneEvent.ts  cologneGrant.ts  cosmeticsCache.ts  cosmeticsService.ts  currencyService.ts  emojiCategories.ts  emojiMap.ts  emojiService.ts  emoteParser.ts  emoteService.ts  eventSub.ts  favoriteEmoteService.ts  identityService.ts  ivrService.ts  linkPreviewService.ts  logService.ts  markdownService.ts  modRoomCrypto.ts  modRoomService.ts  ownProfileCache.ts  paintStyle.ts  proxyAutoOptimizer.ts  releasesService.ts  semiquincentennialEvent.ts  sessionResume.ts  seventvEditorService.ts  seventvEventApi.ts  seventvService.ts  subscriberService.ts  supabaseService.ts  thirdPartyBadges.ts  twitchBadges.ts  (+5 more)
src/stores/: AppStore.ts  TooltipStore.ts  activityStore.ts  chatConnectionStore.ts  chatUserStore.ts  contextMenuStore.ts  dragModerationStore.ts  giftBombStore.ts  listStore.ts  multiNookStore.ts  pinStore.ts  pluginUpdatesStore.ts  proxyHealthStore.ts  sendAccountStore.ts  tutorialStore.ts  vodReplayStore.ts
src/styles/: globals.css
src/themes/: index.ts
src/types/: activity.ts  (+6 more)
(+184 files in other folders)
