[package]
name = "StreamNook"
version = "6.9.0"
description = "Stream Nook"
authors = ["Brandon Winters"]
license = ""
repository = "github.com/winters27/streamnook"
edition = "2021"

[[bin]]
name = "StreamNook"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
lazy_static = "1.5.0"
regex = "1.12.3"
strsim = "0.11.1"
phf_codegen = "0.11"

[dependencies]
tauri = { version = "2.10.2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = { version = "0.13.2", features = ["json", "gzip", "cookies", "multipart"] }
cookie_store = "0.22.1"
oauth2 = "5.0.0"
discord-rich-presence = "1.1.0"
anyhow = "1.0.101"
confy = "2.0.0"
warp = { version = "0.4.2", features = ["server", "websocket"] }
futures = "0.3"
futures-util = { version = "0.3.31", features = ["sink"] }
rand = "0.10.0"
keyring = "3.6.3"  # For secure token storage
url = "2.5.8"
sha2 = "0.10.9"
base64 = "0.22.1"
lazy_static = "1.5.0"
dirs = "6.0.0"
tauri-plugin-http = "2.5.4"
regex = "1.12.3"
strsim = "0.11.1"
uuid = { version = "1.21.0", features = ["v4"] }
urlencoding = "2.1.3"
chrono = { version = "0.4.43", features = ["serde"] }
scraper = "0.25.0"
once_cell = "1.21.3"
sevenz-rust = "0.6"
cosmic-text = "0.17.1"
scopeguard = "1.2"
rust-embed = "8.11"
mime_guess = "2.0"
phf = "0.11"
lru = "0.12"
cfspeedtest = "2.1"
log = "0.4"
env_logger = "0.11"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
