[package]
name = "StreamNook"
version = "8.3.3"
description = "StreamNook"
authors = ["Brandon Winters"]
license = ""
repository = "github.com/winters27/streamnook"
edition = "2021"

[[bin]]
name = "StreamNook"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
lazy_static = "1.5.0"
regex = "1.12.2"
strsim = "0.11.1"
phf_codegen = "0.11"

[dependencies]
tauri = { version = "2.9.4", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "cookies", "multipart"] }
cookie_store = "0.22.0"
oauth2 = "5.0.0"
discord-rich-presence = "1.0.0"
anyhow = "1.0.100"
async-trait = "0.1.83"
confy = "2.0.0"
warp = { version = "0.4.2", features = ["server", "websocket"] }
futures = "0.3"
futures-util = { version = "0.3.31", features = ["sink"] }
rand = "0.9.2"
keyring = "3.6.3"  # For secure token storage
url = "2.5.7"
sha2 = "0.10.9"
sha1 = "0.10.6"  # SAPISIDHASH for the YouTube webview-session auth
base64 = "0.22.1"
# Song recognition: FFT + binary signature encoding for the vendored Shazam
# fingerprinter (services/song_id, MIT, from shazamio-core).
chfft = "0.3.4"
byteorder = "1.5"
crc32fast = "1.4"
lazy_static = "1.5.0"
dirs = "6.0.0"
tauri-plugin-http = "2.5.4"
regex = "1.12.2"
strsim = "0.11.1"
uuid = { version = "1.19.0", features = ["v4"] }
urlencoding = "2.1.3"
chrono = { version = "0.4.42", features = ["serde"] }
flate2 = "1.0"
scraper = "0.25.0"
once_cell = "1.21.3"
sevenz-rust = "0.6"
cosmic-text = "0.15.0"
scopeguard = "1.2"
phf = "0.11"
lru = "0.12"

# TikTok LIVE webcast reader (vendored in-tree, see vendor/tiktok-live). Pure-Rust
# ttwid-only connector (no signing service / no Python); deps pinned to match ours
# so cargo builds one shared tokio-tungstenite/reqwest stack.
tiktok-live = { path = "vendor/tiktok-live" }

# Plugin host: manifest parsing, version gating, artifact verification and unpack
toml = "0.8"
semver = "1"
minisign-verify = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

log = "0.4"
env_logger = "0.11"
tauri-plugin-deep-link = "2.4.7"
# Companion to deep-link: when a streamnook:// URL is opened while the app is
# already running, Windows launches a second copy with the URL as its argv.
# single-instance forwards that argv to the running instance (which re-feeds it
# to the deep-link plugin) instead of spawning a duplicate window.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-clipboard-manager = "2.3.2"

# Screen capture for the Profile share feature. xcap grabs real WebView pixels
# (post compositor) so backdrop-filter / paint gradients / custom fonts render
# faithfully — DOM-clone libs like html-to-image can't see those. `image` is
# used to crop the monitor capture down to the profile card's region and
# encode the result as PNG bytes (static path) or as raw RGBA frames fed to
# the WebP animation encoder (animated path).
#
# webp-animation wraps libwebp's WebPAnimEncoder. Animated WebP is not bound
# by GIF's 256-color palette, so 7TV paint gradients and neon badge glows
# survive encoding without quantization banding. libwebp itself is built from
# vendored C source by libwebp-sys2 via the cc crate — no CMake required, just
# the MSVC toolchain that StreamNook already needs for its other native deps.
xcap = "0.0.14"
# png for the static-paint capture path (capture_screen_region). The
# animated path uses direct DXGI Output Duplication and feeds raw RGBA
# straight to the WebP encoder, no decode step needed.
image = { version = "0.25", default-features = false, features = ["png"] }
webp-animation = "0.9"

# webview2-com powers services/twitch_auth_service.rs (CookieManager).
# The windows crate features cover both that and the DXGI Output
# Duplication pipeline that backs commands/screen_capture.rs's animated
# WebP capture. DXGI gives us hardware-accelerated region-aware capture
# at the monitor's full refresh rate (60+ fps), with the crop happening
# GPU-side via CopySubresourceRegion into a staging texture sized
# exactly to the card — no full-monitor readback, no third-party binary.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
