[package]
name = "chat-logger"
version = "0.1.0"
edition = "2021"
description = "StreamNook chat logging plugin: plain text log files, one per channel per day"

[[bin]]
name = "chat-logger"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
