[package]
name = "drops-farmer"
version = "0.1.0"
edition = "2021"
description = "StreamNook farming plugin (channel points and drops) — community add-on"

[[bin]]
name = "drops-farmer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
flate2 = "1"
base64 = "0.22"
chrono = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
